--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.data.rest.base-path=/api
 allowed.origins = http://localhost:4200
 
 spring.data.rest.detection-strategy = ANNOTATED
+
+
+okta.oauth2.issuer=https://dev-64273663.okta.com/oauth2/default
+okta.oauth2.client-id=0oaf8cpvjihC222ap5d7
