--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,9 @@ okta.oauth2.client-id=0oaf8cpvjihC222ap5d7
 # Server web port
 server.port=8443
 
+#For environments Demo
+#server.port = 9898
+
 # Enable HTTPS support (only accept HTTPS requests)
 server.ssl.enabled=true
 
