--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,13 @@
 	</properties>
 
 	<dependencies>
+
+
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>22.7.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.okta.spring</groupId>
 			<artifactId>okta-spring-boot-starter</artifactId>
